Update install script

--- a/scripts/install
+++ b/scripts/install
@@ -10,5 +10,4 @@ if [ ! -d $VENV ]; then
   $PYTHON -m venv $VENV
 fi
 
-${BIN}pip install -U pip wheel
-${BIN}pip install .
+${BIN}pip install -e .
