Ajout du scraping de doctolib pour les centres de rdv
Creation de la fonction doctolib_getcsv_scrap(is_professionnel) qui génère un fichier csv (un pour les pros ou un pour les non pros selon le paramètre passé) contenant les centres scrapés
Adaptation de la fonction centre_iterator() pour comparer les centres du fichier data.gouv avec les centres scrapés

--- a/scripts/install
+++ b/scripts/install
@@ -1,14 +1,9 @@
 #!/bin/sh -e
 
-PYTHON="python3"
+PYTHON="py"
 VENV="venv"
 BIN="$VENV/bin/"
 
-set -x
 
-if [ ! -d $VENV ]; then
-  $PYTHON -m venv $VENV
-fi
-
-${BIN}pip install -U pip wheel
-${BIN}pip install -e .
+pip install -U pip wheel
+pip install -e .
